# ink-test-contracts

./: .gitignore  Cargo.toml  README.md  build.rs
contracts/async-xcm-call-no-ce/: Cargo.toml
contracts/au-ce-getters/: Cargo.toml  helper.rs  lib.rs
contracts/call-xvm-payable/: Cargo.toml  lib.rs
contracts/dummy_error/: Cargo.toml  lib.rs
contracts/flipper/: Cargo.toml
contracts/pallet-assets-ce/: Cargo.toml  helper.rs  lib.rs
contracts/payable/: Cargo.toml  lib.rs
contracts/simple_storage/: Cargo.toml  lib.rs
