[package]
name = "tests-contracts"
version = "0.1.0"
description = "ink! contracts for tests fixtures"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/Astar"


[build-dependencies]
# Currently using patched version due to issue with `RUSTFLAGS` inside build script.
# cargo-build sets the `RUSTFLAGS` for adding linker flags which are not applied when
# invoking it inside a build script, thus contract compilation fails.
# Fix - use `CARGO_ENCODED_RUSTFLAGS` instead of `RUSTFLAGS`
# https://github.com/rust-lang/cargo/issues/10111
# TODO: remove this once it is merged in upstream
contract-build = { git = "https://github.com/ashutoshvarma/cargo-contract", branch = "patch/fix-rustflags" }